# stock-price-prediction-lstm

./: .gitignore  Dockerfile  README.md  alert.rules.yml  docker-compose.yml  prometheus.yml  pyproject.toml
api/: db.py  main.py  tasks.py
api/ml/architectures/: lstm_regressor.py
api/ml/inference/: predictor.py
api/ml/metrics/: regression.py
api/ml/preprocessing/: scalling.py  sequences.py
api/ml/registry/: builders.py  schemas.py
api/ml/training/: trainer.py
api/models/: stock_price.py  trained_model.py
api/monitoring/: prometheus.py
api/routers/: data.py  model.py  predict.py
api/schema/: model_registry.py  predict_request.py  price_response.py  reconcile_request.py  train_request.py
api/services/: model_registry_service.py  model_service.py  stock_data_ingestion_service.py  stock_price_service.py
api/storage/: r2_client.py
app/: main.py
