[project]
name = "stock-price-prediction-lstm"
version = "0.1.0"
description = "Stock Price Prediction using LSTM"
authors = [
    {name = "Felipe Durar",email = "felipe.malaquias@venturus.org.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false